<resources>
    <string name="app_name">Vehicle Service Tracker</string>
    <string name="vehInfo">Vehicle Info</string>
    <string name="clickForInfo">Click A Service Record To View Notes</string>
    <string name="aboutTitle">About This App &amp; The Developer</string>
    <string name="logo_desc">Vehicle Service Tracker Logo</string>
    <string name="add_v_text">Add A Vehicle</string>
    <string name="exist_v_text">Existing Vehicle</string>
    <string name="select_v_text">Select A Vehicle</string>
    <string name="add_record">Add Record</string>
    <string name="hintYear">Year</string>
    <string name="hintMake">Make</string>
    <string name="hintModel">Model</string>
    <string name="goBackBtn">Go Back</string>
    <string name="aboutBtn">About This App</string>
    <string name="spinYear">Select Vehicle Year</string>
    <string name="chooseDate">Date Of Service</string>
    <string name="svcType">Type Of Service</string>
    <string name="mileage">Current Mileage</string>
    <string name="svcNotes">Add Notes About Service</string>
    <string name="admin">Admin Stuff</string>
    <string name="eraseList">Erase All Vehicle Data</string>
    <string name="yesSure">Yes I Am Sure</string>
    <string name="areYouSure">ARE YOU SURE???!</string>
    <string name="OK">Okay</string>
    <string name="aboutAppTxt">\t This app was developed with the car enthusiast in mind. If you work on your own vehicle, this application is for you!<br/>
    You can add as many vehicles as you like and then keep track of all of the maintenance you\'ve done.This application will also update you when your next service is due (as long as you set the time frame).<b/>
    This application was developed using Android Studio using Kotlin in just over a month.
        <br/>
        <br/>Developed in 2022 by Stephen Sysak.</string>

    <string name="versionNum">Version 0.3 Alpha</string>


</resources>